fix(confirmation): fix left alignment

--- a/packages/confirmation/src/components/base-confirmation/index.module.css
+++ b/packages/confirmation/src/components/base-confirmation/index.module.css
@@ -3,10 +3,9 @@
 .component {
     width: 100%;
     max-width: 388px;
-    margin: var(--gap-0) auto;
     color: var(--color-light-text-secondary);
 
-    &.alignLeft {
-        margin: unset;
+    &.center {
+        margin: var(--gap-0) auto;
     }
 }
